解决日志文件冲突问题