@@ -1,3 +1,5 @@
+import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
+
 val protobuf: String by System.getProperties()
 val netty: String by System.getProperties()
 
@@ -11,6 +13,29 @@ dependencies {
   compileOnly("org.springframework.boot:spring-boot-starter-web")
 }
 
+tasks.getByName<Jar>("jar") {
+  enabled = true
+  excludes += "logback.groovy"
+}
+
+tasks.withType<ShadowJar> {
+  archiveFileName.set("netty-boot.jar")
+  manifest {
+    attributes(mapOf("Main-Class" to "org.github.ApplicationKt"))
+  }
+}
+
 tasks.withType<Test> {
-  jvmArgs = listOf("-ea", "-Dvertx.logger-delegate-factory-class-name=io.vertx.core.logging.SLF4JLogDelegateFactory")
+  useJUnitPlatform()
+  testLogging {
+    events("PASSED", "FAILED", "SKIPPED")
+  }
+  jvmArgs = listOf(
+    "-ea",
+    "-Djava.library.path=native",
+    "-Dio.netty.tryReflectionSetAccessible=true",
+    "--illegal-access=deny",
+    "--add-opens=java.base/java.nio=ALL-UNNAMED",
+    "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED"
+  )
 }
